# churn-demo

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  churn_pipeline.json  pyproject.toml
.github/workflows/: ci.yml
airflow/sql/: input.sql
docker/: Dockerfile  build_image.sh
docs/: terraform.md
eda/: README.md  survival_analysis.ipynb
pipeline/: deploy.py
sql/: input.sql
terraform/: .gitignore  main.tf  outputs.tf  variables.tf
tests/: test_data_splitting.py  test_evaluation.py
trainer/: __init__.py  config.yaml  data_loader.py  data_preprocessing.py  main.py  model_evaluation.py  model_training.py  validation.py
