

[project]
name = "churn-demo"
version = "0.1.0"
description = "Predict Churn"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "google-cloud-bigquery",
  "pandas",
  "numpy",
  "xgboost",
  "optuna",
  "scikit-learn",
  "pyyaml",
  "pydantic>=2.0",
  "db-dtypes",
  "kfp",
  "google-cloud-aiplatform",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "pre-commit",
  "joblib"
]

[tool.setuptools.packages.find]
where = ["trainer"]

[tool.black]
line-length = 100
target-version = ['py312']
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | \.terraform
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = [".venv/*", "__pycache__/*", ".terraform/*"]
